RESOLVED FIXED31070
Crashes due to re-entry into WebCore from plug-in code during RenderWidget::destroy()
https://bugs.webkit.org/show_bug.cgi?id=31070
Summary Crashes due to re-entry into WebCore from plug-in code during RenderWidget::d...
mitz
Reported 2009-11-03 10:43:42 PST
<rdar://problem/7194735> Patch, including test cases, forthcoming.
Attachments
Defer changes to the widget hierarchy during attach(), detach() and recalcStyle() (15.07 KB, patch)
2009-11-03 10:44 PST, mitz
bdakin: review+
mitz
Comment 1 2009-11-03 10:44:46 PST
Created attachment 42396 [details] Defer changes to the widget hierarchy during attach(), detach() and recalcStyle()
Beth Dakin
Comment 2 2009-11-03 10:52:44 PST
Comment on attachment 42396 [details] Defer changes to the widget hierarchy during attach(), detach() and recalcStyle() Eek! Thanks Dan!
mitz
Comment 3 2009-11-03 11:08:43 PST
Note You need to log in before you can comment on or make changes to this bug.